Modified the views

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -31,56 +31,11 @@
 					</div>
 				</div>
 				<!-- /. ROW  -->
-
 				<div class="row">
-					<div class="col-md-3 col-sm-12 col-xs-12">
-						<div
-							class="panel panel-primary text-center no-boder bg-color-green">
-							<div class="panel-body">
-								<i class="fa fa-bar-chart-o fa-5x"></i>
-								<h3>8,457</h3>
-							</div>
-							<div class="panel-footer back-footer-green">Total bookings
-								today</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-12 col-xs-12">
-						<div
-							class="panel panel-primary text-center no-boder bg-color-blue">
-							<div class="panel-body">
-								<i class="fa fa-shopping-cart fa-5x"></i>
-								<h3>52,160</h3>
-							</div>
-							<div class="panel-footer back-footer-blue">Total income</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-12 col-xs-12">
-						<div class="panel panel-primary text-center no-boder bg-color-red">
-							<div class="panel-body">
-								<i class="fa fa fa-comments fa-5x"></i>
-								<h3>15,823</h3>
-							</div>
-							<div class="panel-footer back-footer-red">Users visited</div>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-12 col-xs-12">
-						<div
-							class="panel panel-primary text-center no-boder bg-color-brown">
-							<div class="panel-body">
-								<i class="fa fa-users fa-5x"></i>
-								<h3>2,367</h3>
-							</div>
-							<div class="panel-footer back-footer-brown">New users</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<!-- Advanced Tables -->
 						<!-- Currently it contains hard-coded data later data will from database -->
-						<div class="panel panel-default">
+						<div class="panel panel-primary">
 							<div class="panel-heading">Bookings Details</div>
 							<div class="panel-body">
 								<div class="table-responsive">
@@ -132,7 +87,7 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12">
 
-						<div class="panel panel-default">
+						<div class="panel panel-primary">
 							<div class="panel-heading">Pickup point managers</div>
 							<div class="panel-body">
 								<div class="table-responsive">
