--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3>
 									Issue Bicycle By <strong
@@ -79,7 +79,7 @@
 					</div>
 					<!-- panel-->
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3>Issue Bicycle For Online Booking</h3>
 							</div>
@@ -116,7 +116,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3>Recieve Bicycle</h3>
 							</div>
@@ -141,7 +141,7 @@
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3>Close Booking</h3>
 							</div>
