--- a/src/main/resources/templates/bookingInUse.html
+++ b/src/main/resources/templates/bookingInUse.html
@@ -37,7 +37,7 @@
 			<div class="row">
 				<div class="col-md-12 col-sm-12 col-xs-12">
 					<!-- Advanced Tables -->
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">
 							Bookings In Use <span sec:authorize="hasAuthority('ADMIN')"> ( To view user's details click on user
 								name )</span>
