--- a/src/main/resources/templates/currentBooking.html
+++ b/src/main/resources/templates/currentBooking.html
@@ -151,7 +151,7 @@
 								<div class="col-md-12">
 									<div class="row">
 										<div class="col-md-12 col-sm-12 col-xs-12">
-											<div class="panel panel-info">
+											<div class="panel panel-primary">
 												<div class="panel-heading">Current Booking</div>
 												<div class="panel-body" style="background-color: white;">
 													<div class="table-responsive">
