--- a/src/main/resources/templates/managerPayment.html
+++ b/src/main/resources/templates/managerPayment.html
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<strong>Payment Details</strong>
 						</div>
