--- a/src/main/resources/templates/printUserBookingDetails.html
+++ b/src/main/resources/templates/printUserBookingDetails.html
@@ -85,7 +85,7 @@
 					<div class="text-danger" th:text="${errorMessage}"></div>
 					<div class="form-group">
 						<div class="col-sm-12">
-							<div class="panel panel-info">
+							<div class="panel panel-primary">
 								<div class="panel-heading">Booking details</div>
 								<div class="panel-body" style="background-color: white;">
 									<div class="col-sm-12" id="printId">
