--- a/src/main/resources/templates/transferRequest.html
+++ b/src/main/resources/templates/transferRequest.html
@@ -31,7 +31,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3>Request details</h3>
 							</div>
