--- a/src/main/resources/templates/updateRateGroup.html
+++ b/src/main/resources/templates/updateRateGroup.html
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="col-sm-1"></div>
 				<div class="col-sm-10">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Enter rate group details</div>
 						<div class="panel-body">
 							<br />
