--- a/src/main/resources/templates/addNewBicycle.html
+++ b/src/main/resources/templates/addNewBicycle.html
@@ -34,7 +34,7 @@
 			<div class="row">
 				<div class="col-sm-1"></div>
 				<div class="col-sm-10">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Enter Bicycle details</div>
 						<div class="panel-body">
 							<div class="col-sm-6">
