--- a/src/main/resources/templates/addNewPickupPoint.html
+++ b/src/main/resources/templates/addNewPickupPoint.html
@@ -31,7 +31,7 @@
 			<div class="row">
 				<div class="col-sm-1"></div>
 				<div class="col-sm-10">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Enter Pick up point details
 							details</div>
 						<div class="panel-body">
