--- a/src/main/resources/templates/addNewUser.html
+++ b/src/main/resources/templates/addNewUser.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-9">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<strong>Add New User</strong>
 							</div>
