--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -58,8 +58,8 @@
 					<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{#}"><i class="fa fa-desktop "></i>
 							Pricing and plans<span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level ">
-							<li><a th:href="@{/admin/updateBaseRate}">Add New Base Rate</a></li>
 							<li><a th:href="@{/admin/addNewRateGroup}">Add New Rate Group</a></li>
+							<li><a th:href="@{/admin/updateBaseRate}">Update Base Rate</a></li>
 							<li><a th:href="@{/admin/selectRateGroup}">Update Plan</a></li>
 							<li><a th:href="@{/admin/rateGroupDetails}">Rate Group Details</a></li>
 							</ul></li>
@@ -91,7 +91,6 @@
 											point details</a></li>
 									<li><a th:href="@{/admin/addNewPickupPoint}">Add new
 											pickup point</a></li>
-									<li><a th:href="@{#}">Bicycle transfer</a></li>
 
 								</ul></li>
 						</ul></li>
