--- a/src/main/resources/templates/bookingPayment.html
+++ b/src/main/resources/templates/bookingPayment.html
@@ -34,7 +34,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
 									<form action="manager/issueCyclePayment"
