--- a/src/main/resources/templates/manageRateGroup.html
+++ b/src/main/resources/templates/manageRateGroup.html
@@ -25,14 +25,14 @@
 			<div id="page-inner">
 				<div class="row">
 					<div class="col-md-12">
-						<h1 class="page-header">MANAGE RATE GROUP</h1>
+						<h1 class="page-header">Manage Rate Group</h1>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-6">
 						<h3 class="text-danger" th:text="*{errorMessage}"></h3>
 						<h2 class="text-success" th:text="*{successMessage}"></h2>
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3>Assign Rate Group</h3>
 							</div>
