--- a/src/main/resources/templates/manageRole.html
+++ b/src/main/resources/templates/manageRole.html
@@ -43,7 +43,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3>Set Role</h3>
 							</div>
