--- a/src/main/resources/templates/pickupPointDetails.html
+++ b/src/main/resources/templates/pickupPointDetails.html
@@ -38,7 +38,7 @@
 			<div class="row">
 				<div class="col-sm-1"></div>
 				<div class="col-md-10">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Details</div>
 						<div class="panel-body">
 							<div class="table-responsive">
