--- a/src/main/resources/templates/printIssueBicycleDetails.html
+++ b/src/main/resources/templates/printIssueBicycleDetails.html
@@ -34,7 +34,7 @@
 			<div class="row">
 				<div class="col-sm-2"></div>
 				<div class="col-sm-8">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Booking details</div>
 						<div class="panel-body">
 							<div class="col-sm-12">
