--- a/src/main/resources/templates/rateGroupDetails.html
+++ b/src/main/resources/templates/rateGroupDetails.html
@@ -37,7 +37,7 @@
 			<div class="row">
 				<div class="col-md-12 col-sm-12 col-xs-12">
 					<!-- Advanced Tables -->
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Rate Group Details</div>
 						<div class="panel-body">
 							<div class="table-responsive">
