--- a/src/main/resources/templates/requestsAndNotificatons.html
+++ b/src/main/resources/templates/requestsAndNotificatons.html
@@ -35,7 +35,7 @@
 			<div class="row">
 				<div class="col-sm-1"></div>
 				<div class="col-md-10">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Requests</div>
 						<div class="panel-body">
 							<div class="table-responsive">
