--- a/src/main/resources/templates/selectRateGroup.html
+++ b/src/main/resources/templates/selectRateGroup.html
@@ -25,7 +25,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="page-header">SELECT RATE GROUP</h1>
+					<h1 class="page-header">Select Rate Group</h1>
 				</div>
 			</div>
 			<!-- /. ROW  -->
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="col-sm-1"></div>
 				<div class="col-sm-10">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Select rate group for update the details</div>
 						<div class="panel-body">
 							<br />
