--- a/src/main/resources/templates/setPickUpPoint.html
+++ b/src/main/resources/templates/setPickUpPoint.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h3>Outgoing</h3>
 							</div>
