--- a/src/main/resources/templates/transferResponseAdmin.html
+++ b/src/main/resources/templates/transferResponseAdmin.html
@@ -31,7 +31,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h4>Request Details</h4>
 							</div>
@@ -59,7 +59,7 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<!-- Advanced Tables -->
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">Responses</div>
 							<div class="panel-body">
 								<div class="table-responsive">
