--- a/src/main/resources/templates/transfers.html
+++ b/src/main/resources/templates/transfers.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h4>Outgoing Transfers</h4>
 							</div>
@@ -70,7 +70,7 @@
 					</div>
 					<!-- panel-->
 					<div class="col-md-6">
-						<div class="panel panel-info">
+						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<h4>Incoming Transfers</h4>
 							</div>
