--- a/src/main/resources/templates/updateBaseRate.html
+++ b/src/main/resources/templates/updateBaseRate.html
@@ -29,7 +29,7 @@
 			<div class="row">
 				<div class="col-sm-1"></div>
 				<div class="col-sm-10">
-					<div class="panel panel-info">
+					<div class="panel panel-primary">
 						<div class="panel-heading">Base Rate Details</div>
 						<div class="panel-body">
 							<br />
