--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -124,6 +124,9 @@
 							<li><a th:href="@{/user/bookingHistory/} + ${user.userId}">
 									<i class="fa fa-history"></i> Booking History
 							</a></li>
+							<li><a th:href="@{/user/currentBooking/} + ${user.userId}">
+									<i class="fa fa-history"></i> Current Booking
+							</a></li>
 						</ul>
 					</div>
 					<!-- END MENU -->
