--- a/src/main/resources/templates/walletTransaction.html
+++ b/src/main/resources/templates/walletTransaction.html
@@ -136,6 +136,9 @@
 								th:href="@{/user/bookingHistory/} + ${wallet.user.userId}">
 									<i class="fa fa-history"></i> Booking History
 							</a></li>
+							<li><a th:href="@{/user/currentBooking/} + ${user.userId}">
+									<i class="fa fa-history"></i> Current Booking
+							</a></li>
 						</ul>
 					</div>
 					<!-- END MENU -->
