--- a/src/main/resources/templates/walletTransaction.html
+++ b/src/main/resources/templates/walletTransaction.html
@@ -136,7 +136,7 @@
 								th:href="@{/user/bookingHistory/} + ${wallet.user.userId}">
 									<i class="fa fa-history"></i> Booking History
 							</a></li>
-							<li><a th:href="@{/user/currentBooking/} + ${user.userId}">
+							<li><a th:href="@{/user/currentBooking/} + ${wallet.user.userId}">
 									<i class="fa fa-history"></i> Current Booking
 							</a></li>
 						</ul>
