Fixed linking related issues.

--- a/src/main/resources/templates/printUserBookingDetails.html
+++ b/src/main/resources/templates/printUserBookingDetails.html
@@ -153,13 +153,13 @@
 			<div class="row">
 				<div class="col-md-3" align="left">
 					<h4>
-						Copyright <a href="#index.html#home">Bicycle Sharing</a>
+						Copyright <a href="/index.html#home">Bicycle Sharing</a>
 					</h4>
 				</div>
 				<div class="col-md-6"></div>
 				<div class="col-md-3" align="right">
 					<h4>
-						Developed by <a href="index.html#home">Java Interns</a>
+						Developed by <a href="/index.html#home">Java Interns</a>
 					</h4>
 				</div>
 			</div>
