--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -229,7 +229,7 @@
 				<div class="col-md-6"></div>
 				<div class="col-md-3" align="right">
 					<h4>
-						Developed by <a href="index.html#home">Java Interns</a>
+						Developed by <a href="/index.html#home">Java Interns</a>
 					</h4>
 				</div>
 			</div>
