--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -42,7 +42,7 @@
 					<span class="icon icon-bar"></span> <span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 				</button>
-				<a href="index.html#home" class="smoothScroll navbar-brand">BICYCLE
+				<a href="/index.html#home" class="smoothScroll navbar-brand">BICYCLE
 					SHARING</a>
 			</div>
 			<div class="collapse navbar-collapse">
