--- a/src/main/resources/templates/successRegister.html
+++ b/src/main/resources/templates/successRegister.html
@@ -42,18 +42,18 @@
 					<span class="icon icon-bar"></span> <span class="icon icon-bar"></span>
 					<span class="icon icon-bar"></span>
 				</button>
-				<a href="index.html#home" class="smoothScroll navbar-brand">BICYCLE
+				<a href="/index.html#home" class="smoothScroll navbar-brand">BICYCLE
 					SHARING</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="index.html#home" class="smoothScroll">HOME</a></li>
-					<li><a href="index.html#work" class="smoothScroll">HOW IT
+					<li><a href="/index.html#home" class="smoothScroll">HOME</a></li>
+					<li><a href="/index.html#work" class="smoothScroll">HOW IT
 							WORKS</a></li>
-					<li><a href="index.html#about" class="smoothScroll">ABOUT</a></li>
-					<li><a href="index.html#portfolio" class="smoothScroll">GALLERY</a></li>
-					<li><a href="index.html#plan" class="smoothScroll">PLANS</a></li>
-					<li><a href="index.html#contact" class="smoothScroll">CONTACT</a></li>
+					<li><a href="/index.html#about" class="smoothScroll">ABOUT</a></li>
+					<li><a href="/index.html#portfolio" class="smoothScroll">GALLERY</a></li>
+					<li><a href="/index.html#plan" class="smoothScroll">PLANS</a></li>
+					<li><a href="/index.html#contact" class="smoothScroll">CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
@@ -76,20 +76,20 @@
 		</div>
 	</div>
 
-	<div style="height: 165px"></div>
+	<div style="height: 175px"></div>
 
 	<div class="footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3" align="left">
 					<h4>
-						Copyright <a href="#index.html#home">Bicycle Sharing</a>
+						Copyright <a href="/index.html#home">Bicycle Sharing</a>
 					</h4>
 				</div>
 				<div class="col-md-6"></div>
 				<div class="col-md-3" align="right">
 					<h4>
-						Developed by <a href="index.html#home">Java Interns</a>
+						Developed by <a href="/index.html#home">Java Interns</a>
 					</h4>
 				</div>
 			</div>
