--- a/src/main/resources/templates/addNewRateGroup.html
+++ b/src/main/resources/templates/addNewRateGroup.html
@@ -37,20 +37,20 @@
 						<div class="panel-heading">Enter rate group details details</div>
 						<div class="panel-body">
 							<br />
+							<h3 id="info"></h3>
 							<h3 class="text-danger" th:text="*{errorMessage}"></h3>
 							<h2 class="text-success" th:text="*{successMessage}"></h2>
 							<hr />
 							<div class="col-sm-6">
-								<form action="#" th:action="@{/admin/addRateGroup}"
-									th:object="${rateGroupData}" method="post"
+								<form 
 									class="form-horizontal"
-									onsubmit="return checkEffectiveFrom(this)">
+									onsubmit="return addNewRateGroup()">
 									<fieldset>
 
 										<div class="control-group">
 											<label class="control-label">Group Type</label>
 											<div class="controls">
-												<input type="text" class="form-control" name="groupType"
+												<input type="text" class="form-control" name="groupType" id="groupType"
 													pattern="[a-zA-Z]{2,25}" title="Enter only characters!"
 													maxlength="25" required="required" tabindex="1" />
 											</div>
@@ -59,7 +59,7 @@
 											<label class="control-label">Discount(In
 												Percentage(%))</label>
 											<div class="controls">
-												<input type="number" class="form-control" name="discount"
+												<input type="number" class="form-control" name="discount" id="discount"
 													min="0" max="100" title="Enter only 0 to 100"
 													required="required" tabindex="2" />
 											</div>
@@ -75,7 +75,7 @@
 										<br />
 										<div class="control-group">
 											<div class="controls">
-												<input type="submit" tabindex="4" class="btn btn-primary"
+												<input type="submit" tabindex="4" class="btn btn-primary" id="add"
 													value="Submit" /> <input type="reset" tabindex="5"
 													class="btn btn-primary" value="Reset" />
 
@@ -113,5 +113,6 @@
 		});
 	</script>
 	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
+	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
