--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -58,7 +58,7 @@
 					<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{#}"><i class="fa fa-desktop "></i>
 							Pricing and plans<span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level ">
-							<li><a th:href="@{/admin/addNewRateGroup}">Add New Rate Group</a></li>
+							<li><a th:href="@{/admin/addRateGroup}">Add New Rate Group</a></li>
 							<li><a th:href="@{/admin/updateBaseRate}">Update Base Rate</a></li>
 							<li><a th:href="@{/admin/selectRateGroup}">Update Plan</a></li>
 							<li><a th:href="@{/admin/rateGroupDetails}">Rate Group Details</a></li>
