--- a/src/main/resources/templates/updateBaseRate.html
+++ b/src/main/resources/templates/updateBaseRate.html
@@ -33,19 +33,18 @@
 						<div class="panel-heading">Base Rate Details</div>
 						<div class="panel-body">
 							<br />
+							<h3 id="info"></h3>
 							<h3 class="text-danger" th:text="*{errorMessage}"></h3>
 							<h2 class="text-success" th:text="*{successMessage}"></h2>
 							<hr />
 							<div class="col-sm-6">
-								<form action="#" th:action="@{/admin/updateBaseRate}"
-									th:object="${baseRateData}" method="post"
-									class="form-horizontal">
+								<form onsubmit="return updateBaseRate()" class="form-horizontal">
 									<fieldset>
 
 										<div class="control-group">
 											<label class="control-label">Group Type</label>
 											<div class="controls">
-												<input type="text" class="form-control" name="groupType"
+												<input type="text" class="form-control" id ="groupType" name="groupType"
 													th:value="${groupType.groupType}" readonly="readonly"
 													maxlength="15" required="required" tabindex="1" />
 											</div>
@@ -53,7 +52,7 @@
 										<div class="control-group">
 											<label class="control-label">Base Rate</label>
 											<div class="controls">
-												<input type="number" class="form-control" name="baseRate"
+												<input type="number" class="form-control" id="baseRate" name="baseRate"
 													min="1" max="999" step="1" title="enter only positive number" maxlength="3"
 													pattern="[0-9]{1,3}" th:value="${groupType.baseRate}"
 													required="required" tabindex="2" />
@@ -63,7 +62,7 @@
 										<div class="control-group">
 											<div class="controls">
 												<input type="submit" tabindex="3" class="btn btn-primary"
-													value="Submit" /> <input type="reset" tabindex="4"
+													 id="update" value="Submit" /> <input type="reset" tabindex="4"
 													class="btn btn-primary" value="Reset" />
 											</div>
 										</div>
@@ -88,5 +87,6 @@
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
 	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
+	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
