--- a/src/main/resources/templates/updateRateGroup.html
+++ b/src/main/resources/templates/updateRateGroup.html
@@ -37,30 +37,30 @@
 						<div class="panel-heading">Enter rate group details</div>
 						<div class="panel-body">
 							<br />
+							<h3 id="info"></h3>
 							<h3 class="text-danger" th:text="*{errorMessage}"></h3>
 							<h2 class="text-success" th:text="*{successMessage}"></h2>
 							<hr />
 							<div class="col-sm-6">
-								<form action="#" th:action="@{/admin/updatedRateGroup}"
-									th:object="${updateRateGroupData}" method="post"
-									class="form-horizontal"
-									onsubmit="return checkEffectiveFrom(this)">
+								<form method="post" class="form-horizontal"
+									onsubmit="return  updateRateGroup()">
 									<fieldset>
 										<div class="control-group">
 											<label class="control-label">Rate GroupId</label>
 											<div class="controls">
 												<input type="text" class="form-control" name="rateGroupId"
-													th:value="${rateGroup.rateGroupId}" disabled="disabled"
-													required="required" tabindex="1" />
+													id="rateGroupId" th:value="${rateGroup.rateGroupId}"
+													disabled="disabled" required="required" tabindex="1" />
 											</div>
 										</div>
 										<div class="control-group">
 											<label class="control-label">Group Type</label>
 											<div class="controls">
-												<input type="text" class="form-control" th:value="${rateGroup.groupType}" name="groupType"
-													pattern="[a-zA-Z]{2,25}" title="Enter only characters!"
-													maxlength="25" readonly="readonly" required="required"
-													tabindex="2" />
+												<input type="text" class="form-control"
+													th:value="${rateGroup.groupType}" name="groupType"
+													id="groupType" pattern="[a-zA-Z]{2,25}"
+													title="Enter only characters!" maxlength="25"
+													readonly="readonly" required="required" tabindex="2" />
 											</div>
 										</div>
 										<div class="control-group">
@@ -68,9 +68,9 @@
 												Percentage(%))</label>
 											<div class="controls">
 												<input type="number" class="form-control" name="discount"
-												th:value="${rateGroup.discount}"
-													min="0" max="100" title="Enter only 0 to 100"
-													required="required" tabindex="3" />
+													id="discount" th:value="${rateGroup.discount}" min="0"
+													max="100" title="Enter only 0 to 100" required="required"
+													tabindex="3" />
 											</div>
 										</div>
 										<div class="control-group">
@@ -86,8 +86,8 @@
 										<div class="control-group">
 											<div class="controls">
 												<input type="submit" tabindex="5" class="btn btn-primary"
-													value="Submit" /> <input type="reset" tabindex="6"
-													class="btn btn-primary" value="Reset" />
+													id="update" value="Submit" /> <input type="reset"
+													tabindex="6" class="btn btn-primary" value="Reset" />
 											</div>
 										</div>
 									</fieldset>
@@ -122,5 +122,6 @@
 		});
 	</script>
 	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
+	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
