--- a/src/main/resources/templates/addNewBicycle.html
+++ b/src/main/resources/templates/addNewBicycle.html
@@ -32,55 +32,50 @@
 			<!-- /. ROW  -->
 
 			<div class="row">
-				<div class="col-sm-1"></div>
-				<div class="col-sm-10">
+				<div class="col-sm-6">
 					<div class="panel panel-primary">
 						<div class="panel-heading">Enter Bicycle details</div>
 						<div class="panel-body">
-							<div class="col-sm-6">
-								<form onsubmit="return addBicycle()" class="form-horizontal">
-									<fieldset>
-
-										<div class="control-group">
-											<label class="control-label">Chasis Nubmer</label>
-											<div class="controls">
-												<input type="text" tabindex="1" maxlength="20"
-													id="chasisNo" placeholder=""
-													class="input-xlarge form-control" required="required" /> <span
-													class="help-block">The bicycle chasis no.</span>
-											</div>
+							<form onsubmit="return addBicycle()" class="form-horizontal">
+								<fieldset>
+									<div class="control-group">
+										<label class="control-label">Chasis Nubmer</label>
+										<div class="controls">
+											<input type="text" tabindex="1" maxlength="20" id="chasisNo"
+												placeholder="" class="input-xlarge form-control"
+												required="required" /> <span class="help-block">The
+												bicycle chasis no.</span>
 										</div>
+									</div>
 
-										<div class="control-group">
-											<label class="control-label">Add to</label>
-											<div class="controls">
-												<select tabindex="2" class="input-xlarge form-control"
-													id="pickUpPoint" required="required">
-													<option value="">Select Pickup Point</option>
-													<option th:each="pickUpPoint : ${pickUpPoints}"
-														th:value="${pickUpPoint.pickUpPointId}"
-														th:text="${pickUpPoint.location}"></option>
-												</select> <span class="help-block">Input the initial pick up
-													point id</span>
-											</div>
+									<div class="control-group">
+										<label class="control-label">Add to</label>
+										<div class="controls">
+											<select tabindex="2" class="input-xlarge form-control"
+												id="pickUpPoint" required="required">
+												<option value="">Select Pickup Point</option>
+												<option th:each="pickUpPoint : ${pickUpPoints}"
+													th:value="${pickUpPoint.pickUpPointId}"
+													th:text="${pickUpPoint.location}"></option>
+											</select> <span class="help-block">Input the initial pick up
+												point id</span>
 										</div>
+									</div>
 
-										<div class="control-group">
-											<div class="controls">
-												<button id="add" type="submit" tabindex="3" class="btn btn-primary">Add
-													bicycle</button>
-											</div>
+									<div class="control-group">
+										<div class="controls">
+											<button id="add" type="submit" tabindex="3"
+												class="btn btn-primary">Add bicycle</button>
 										</div>
-									</fieldset>
-								</form>
-							</div>
-							<div class="col-sm-6" style="padding-top: 60px;">
-								<h3 id="info"></h3>
-							</div>
+									</div>
+								</fieldset>
+							</form>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-1"></div>
+				<div class="col-sm-6" style="padding-top: 60px;">
+					<h3 class="popover popover-right" style="padding: 10px;" id="info"></h3>
+				</div>
 			</div>
 		</div>
 	</div>
