--- a/src/main/resources/templates/addWalletBalance.html
+++ b/src/main/resources/templates/addWalletBalance.html
@@ -36,22 +36,23 @@
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
-									<form action="#" th:action="@{/manager/wallet}"
-										th:object="${addWalletBalance}" method="post">
+									<form onsubmit="return addBalance()" class="form-horizontal">
 										<div>
 											<label class="control-label"> UserId</label> <input
-												type="text" name="userId" class="form-control" maxlength="15"
-												required="required" />
+												type="text" id="userId" class="form-control" maxlength="15"
+												required="required" tabindex="1" />
 										</div>
 										<div>
 											<label class="control-label">Balance</label> <input
-												type="number" min="100" max="999" step="10" name="balance"
-												class="form-control" maxlength="3" required="required" />
+												type="number" min="100" max="999" step="10" id="balance"
+												class="form-control" maxlength="3" required="required"
+												tabindex="2" />
 
 										</div>
 										<div style="padding: 5px">
-											<input type="submit" value="Add Balance" class="btn btn-primary" />
-											<input type="reset" class="btn btn-info" />
+											<button id="add" type="submit" tabindex="3"
+												class="btn btn-primary">Add Balance</button>
+											<input type="reset" class="btn btn-info" tabindex="4" />
 										</div>
 									</form>
 								</div>
@@ -59,8 +60,7 @@
 						</div>
 					</div>
 					<div class="col-md-6" style="padding-top: 60px;">
-						<h3 class="text-danger" th:text="*{errorMessage}"></h3>
-						<h2 class="text-success" th:text="*{successMessage}"></h2>
+						<h3 class="popover popover-right" style="padding: 10px;" id="info"></h3>
 					</div>
 				</div>
 			</div>
@@ -78,9 +78,8 @@
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
-	<script src="/js/jquery.js" th:src="@{js/jquery.js}"></script>
-	<script src="/js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
-	<script src="/js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
 	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
+	<!-- Ajax Js -->
+	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
