--- a/src/main/resources/templates/updateBaseRate.html
+++ b/src/main/resources/templates/updateBaseRate.html
@@ -33,7 +33,7 @@
 						<div class="panel-heading">Base Rate Details</div>
 						<div class="panel-body">
 							<br />
-							<h3 id="info"></h3>
+							<h3 class="popover popover-right" style="padding: 10px;" id="info"></h3>
 							<h3 class="text-danger" th:text="*{errorMessage}"></h3>
 							<h2 class="text-success" th:text="*{successMessage}"></h2>
 							<hr />
