--- a/src/main/resources/templates/addWalletBalance.html
+++ b/src/main/resources/templates/addWalletBalance.html
@@ -60,7 +60,7 @@
 						</div>
 					</div>
 					<div class="col-md-6" style="padding-top: 60px;">
-						<h3 class="popover popover-right" style="padding: 10px;" id="info"></h3>
+						<h3 class="popover popover-right" id="info"></h3>
 					</div>
 				</div>
 			</div>
