--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -35,10 +35,9 @@
 						<small sec:authorize="hasAuthority('ADMIN')">(You cannot
 							change your own role.)</small>
 					</h2>
+					<br />
+					<h3 class="alert alert-warning" id="info"></h3>
 				</div>
-			</div>
-			<div class="row" style="margin-bottom: 10px">
-				<h2 id="info"></h2>
 			</div>
 			<div class="row">
 				<div class="col-md-12 col-sm-12 col-xs-12">
