--- a/src/main/resources/templates/updateRateGroup.html
+++ b/src/main/resources/templates/updateRateGroup.html
@@ -37,7 +37,7 @@
 						<div class="panel-heading">Enter rate group details</div>
 						<div class="panel-body">
 							<br />
-							<h3 class="popover popover-right" style="padding: 10px;" id="info"></h3>
+							<h3 class="popover popover-right" id="info"></h3>
 							<h3 class="text-danger" th:text="*{errorMessage}"></h3>
 							<h2 class="text-success" th:text="*{successMessage}"></h2>
 							<hr />
