--- a/src/main/resources/templates/transferRequest.html
+++ b/src/main/resources/templates/transferRequest.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Bicycle Sharing:Wallet Balance</title>
+<title>Bicycle Sharing:Transfer Request</title>
 <!-- Bootstrap Styles-->
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet" />
 <!-- FontAwesome Styles-->
@@ -37,15 +37,16 @@
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
-									<form action="#" th:action="@{/manager/sendRequest}"
-										th:object="${transferData}" method="post">
+									<form onsubmit="return transferRequest()" method="post">
 										<div>
 											<label class="control-label">Quantity</label> <input
-												type="number" min="5" step="5" max="50" title="Enter numbers only" name="quantity"
+												type="number" min="5" step="5" max="50"
+												title="Enter numbers only" id="quantity" name="quantity"
 												class="form-control" required="required" />
 										</div>
 										<div style="padding: 5px">
-											<input type="submit" value="Send Request" class="btn btn-primary" />
+											<input type="submit" id="send" value="Send Request"
+												class="btn btn-primary" />
 										</div>
 									</form>
 								</div>
@@ -53,8 +54,7 @@
 						</div>
 					</div>
 					<div class="col-md-6" style="padding-top: 60px;">
-						<h3 class="text-danger" th:text="*{errorMessage}"></h3>
-						<h2 class="text-success" th:text="*{successMessage}"></h2>
+						<h3 class="popover popover-right" id="info"></h3>
 					</div>
 				</div>
 			</div>
@@ -76,5 +76,6 @@
 	<script src="/js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
 	<script src="/js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
 	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
+	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
