Fixed some css errors. Removed one unnecessary file.

--- a/src/main/resources/static/css/admin-styles.css
+++ b/src/main/resources/static/css/admin-styles.css
@@ -80,6 +80,10 @@ p {
 .alert {
 	display: none;
 }
+
+#close-panel {
+	float: right;
+}
 /*----------------------------------------------
    DASHBOARD STYLES    
 ------------------------------------------------*/
