Confirmation for user status update and some modification on transfer related UI.

--- a/src/main/resources/static/css/admin-styles.css
+++ b/src/main/resources/static/css/admin-styles.css
@@ -85,6 +85,10 @@ p {
 #close-panel {
 	float: right;
 }
+
+body.modal-open {
+    overflow: visible;
+}
 /*----------------------------------------------
    DASHBOARD STYLES    
 ------------------------------------------------*/
