--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -16,8 +16,7 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand " th:href="@{/index}">Bicycle
-					Sharing</a>
+				<a class="navbar-brand " th:href="@{/index}">Bicycle Sharing</a>
 			</div>
 
 			<ul class="nav navbar-top-links navbar-right">
@@ -38,10 +37,12 @@
 						<li><a th:href="@{/user/changePassword}"><i
 								class="fa fa-gear fa-fw"></i> Settings</a></li>
 						<li class="divider"></li>
-						<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/logout}"><i
-								class="fa fa-sign-out fa-fw"></i> Logout</a></li>
-						<li sec:authorize="hasAuthority('MANAGER')"><a th:href="@{/managerLogout}"><i
-								class="fa fa-sign-out fa-fw"></i> Logout</a></li>
+						<li sec:authorize="hasAuthority('ADMIN')"><a
+							th:href="@{/logout}"><i class="fa fa-sign-out fa-fw"></i>
+								Logout</a></li>
+						<li sec:authorize="hasAuthority('MANAGER')"><a
+							th:href="@{/managerLogout}"><i class="fa fa-sign-out fa-fw"></i>
+								Logout</a></li>
 					</ul> <!-- /.dropdown-user --></li>
 				<!-- /.dropdown -->
 			</ul>
@@ -55,17 +56,26 @@
 						th:href="@{/manager/managerHome}"><i class="fa fa-dashboard "></i>Dashboard</a></li>
 					<li sec:authorize="hasAuthority('ADMIN')"><a
 						th:href="@{/admin/adminHome}"><i class="fa fa-dashboard "></i>Dashboard</a></li>
-					<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{#}"><i class="fa fa-desktop "></i>
-							Pricing and plans<span class="fa arrow"></span></a>
-							<ul class="nav nav-second-level ">
-							<li><a th:href="@{/admin/addRateGroup}">Add New Rate Group</a></li>
-							<li><a th:href="@{/admin/updateBaseRate}">Update Base Rate</a></li>
+					<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{#}"><i
+							class="fa fa-desktop "></i> Pricing and plans<span
+							class="fa arrow"></span></a>
+						<ul class="nav nav-second-level ">
+							<li><a th:href="@{/admin/addRateGroup}">Add New Rate
+									Group</a></li>
+							<li><a th:href="@{/admin/updateBaseRate}">Update Base
+									Rate</a></li>
 							<li><a th:href="@{/admin/selectRateGroup}">Update Plan</a></li>
-							<li><a th:href="@{/admin/rateGroupDetails}">Rate Group Details</a></li>
-							</ul></li>
-					<li sec:authorize="hasAuthority('ADMIN')"><a
-						th:href="@{/admin/requests}"><i class="fa fa-qrcode "></i>
-							Requests and Notifications</a></li>
+							<li><a th:href="@{/admin/rateGroupDetails}">Rate Group
+									Details</a></li>
+						</ul></li>
+					<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{#}"><i
+							class="fa fa-qrcode "></i>Transfer Requests<span
+							class="fa arrow "></span></a>
+						<ul class="nav nav-second-level ">
+							<li><a th:href="@{/admin/requests}">Requests</a></li>
+							<li><a th:href="@{/admin/approvedRequests}">Approved Requests</a></li>
+							<li><a th:href="@{/admin/transfers}">Transfers</a></li>
+						</ul></li>
 					<li sec:authorize="hasAuthority('MANAGER')"><a th:href="@{#}"><i
 							class="fa fa-qrcode "></i>Transfer Requests<span
 							class="fa arrow "></span></a>
@@ -73,6 +83,7 @@
 							<li><a th:href="@{/manager/transferRequest}">Request for
 									Bicycles</a></li>
 							<li><a th:href="@{/manager/requests}">Other's Requests</a></li>
+							<li><a th:href="@{/manager/approvedRequests}">Approved Requests</a></li>
 							<li><a th:href="@{/manager/transfers}">Transfers</a></li>
 						</ul></li>
 					<li sec:authorize="hasAuthority('ADMIN')"><a
