--- a/src/main/resources/templates/requestsAndNotificatons.html
+++ b/src/main/resources/templates/requestsAndNotificatons.html
@@ -61,18 +61,12 @@
 												(Id=<span th:text="${request.manager.userId}"></span>)</td>
 											<td class="text-center" th:text="${request.quantity}"></td>
 											<td th:text="${request.requestedOn}"></td>
-											<td sec:authorize="hasAuthority('ADMIN')"><span
-												th:if="${request.isApproved}">Already Approved</span><a
-												th:unless="${request.isApproved}"
+											<td sec:authorize="hasAuthority('ADMIN')"><a
 												th:href="@{/admin/respond/} + ${request.requestId}"><button
-														class="btn btn-primary">Respond</button></a></td>
-											<td sec:authorize="hasAuthority('MANAGER')"
-												th:if="${request.isResponded}"><span>Already
-													Responded</span></td>
-											<td sec:authorize="hasAuthority('MANAGER')"
-												th:unless="${request.isResponded}"><a
+														class="btn btn-primary">View</button></a></td>
+											<td sec:authorize="hasAuthority('MANAGER')"><a
 												th:href="@{/manager/respond/} + ${request.requestId}"><button
-														class="btn btn-primary">Respond</button></a></td>
+														class="btn btn-primary">View</button></a></td>
 										</tr>
 									</tbody>
 								</table>
