--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -12,8 +12,6 @@
 <!-- Morris Chart Styles-->
 <link th:href="@{/js/morris/morris-0.4.3.min.css}" rel="stylesheet" />
 <link rel="stylesheet" th:href="@{http://www.w3schools.com/lib/w3.css}" />
-<!-- Custom Styles-->
-<link th:href="@{/css/admin-styles.css}" rel="stylesheet" />
 <!-- Google Fonts-->
 <link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
 	rel="stylesheet" type="text/css" />
@@ -22,7 +20,8 @@
 <link
 	th:href="@{https://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css}"
 	rel="stylesheet" />
-
+<!-- Custom Styles-->
+<link th:href="@{/css/admin-styles.css}" rel="stylesheet" />
 </head>
 <body>
 	<div th:include="adminNav :: head-and-side"></div>
@@ -59,25 +58,22 @@
 									id="users">
 									<thead>
 										<tr>
-											<th style="vertical-align: text-top;">User Id</th>
-											<th style="vertical-align: text-top;">User Name</th>
-											<th style="vertical-align: text-top;">User Address</th>
-											<th style="vertical-align: text-top;">Mobile No</th>
-											<th style="vertical-align: text-top;">Registered on</th>
-											<th style="vertical-align: text-top;">Role</th>
-											<th style="vertical-align: text-top;">Is approved?</th>
-											<th style="vertical-align: text-top;">Is Active?</th>
+											<th>User Id</th>
+											<th>User Name</th>
+											<th>User Address</th>
+											<th>Mobile No</th>
+											<th>Registered on</th>
+											<th>Role</th>
+											<th>Is approved?</th>
+											<th>Is Active?</th>
 										</tr>
 									</thead>
 								</table>
 							</div>
-
 						</div>
-
 					</div>
 					<!--End Advanced Tables -->
 				</div>
-
 			</div>
 			<!-- /. ROW  -->
 		</div>
@@ -99,6 +95,7 @@
 	<script th:src="@{/js/tabledata.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
+	<script th:src="@{/js/bootbox.min.js}" type="text/javascript"></script>
 	<script th:src="@{/js/ajax-functions.js}" type="text/javascript"></script>
 </body>
 </html>
