--- a/src/main/resources/templates/transferResponseManager.html
+++ b/src/main/resources/templates/transferResponseManager.html
@@ -30,10 +30,35 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="col-sm-6">
+						<div class="panel panel-primary">
+							<div class="panel-heading">Request Details</div>
+							<div class="panel-body">
+								<div>
+									<strong>Request Id: </strong><span
+										th:text="${request.requestId}"></span>
+								</div>
+								<div>
+									<strong>Pickup Point Location: </strong><span
+										th:text="${request.pickUpPoint.location}"></span>
+								</div>
+								<div>
+									<strong>Quantity Requested: </strong><span
+										th:text="${request.quantity}"></span>
+								</div>
+								<div>
+									<strong>Quantity Approved: </strong><span
+										th:text="${request.approvedQuantity}"></span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row" th:unless="${responded}">
 					<div class="col-md-6">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
-								<h3>Send Confirmation</h3>
+								<h3>Response quantity</h3>
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
@@ -41,8 +66,8 @@
 										th:object="${responseData}" method="post">
 										<div>
 											<label class="control-label">Request ID</label> <input
-												type="text" name="requestId" th:value="${request.requestId}" class="form-control"
-												required="required" readonly="readonly" />
+												type="text" name="requestId" th:value="${request.requestId}"
+												class="form-control" required="required" readonly="readonly" />
 										</div>
 										<div>
 											<label class="control-label">Quantity</label> <input
@@ -62,6 +87,39 @@
 						<h3 class="text-danger" th:text="*{errorMessage}"></h3>
 						<h2 class="text-success" th:text="*{successMessage}"></h2>
 					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-8 col-sm-12 col-xs-12">
+						<!-- Advanced Tables -->
+						<div class="panel panel-primary">
+							<div class="panel-heading">Responses</div>
+							<div class="panel-body">
+								<div class="table-responsive">
+									<table class="table table-striped table-bordered table-hover"
+										id="dataTables-example">
+										<thead>
+											<tr>
+												<th class="text-center">Response Id</th>
+												<th class="text-center">Pickup point location</th>
+												<th class="text-center">Quantity</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr th:each="response : ${responses}">
+												<td class="text-center" th:text="${response.responseId}"></td>
+												<td class="text-center"
+													th:text="${response.pickUpPoint.location}"></td>
+												<td class="text-center" th:text="${response.quantity}"></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+
+							</div>
+						</div>
+						<!--End Advanced Tables -->
+					</div>
+
 				</div>
 			</div>
 		</div>
