Added Closed Transfer view with bicycle details.

--- a/src/main/resources/templates/closedTransfers.html
+++ b/src/main/resources/templates/closedTransfers.html
@@ -67,7 +67,7 @@
 									<h4 class="modal-title">Bicycles transferred</h4>
 								</div>
 								<div class="modal-body">
-									<p id="bicycleChasisNo">MMMMM</p>
+									<p id="bicycleChasisNo"></p>
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="btn btn-default"
