Added data on modal and fixed css

--- a/src/main/resources/templates/closedTransfers.html
+++ b/src/main/resources/templates/closedTransfers.html
@@ -64,7 +64,7 @@
 									<button type="button" class="close" data-dismiss="modal">
 										<div class="glyphicon glyphicon-remove"></div>
 									</button>
-									<h4 class="modal-title">Bicycles transferred</h4>
+									<h4 class="modal-title">Chasis Numbers of the bicycles transferred</h4>
 								</div>
 								<div class="modal-body">
 									<p id="bicycleChasisNo"></p>
